src/app/common/swiper/swiper.component.scss
.swiper-title {
  padding-top: 10px;
  display: flex;
  justify-content: space-between;

  .left {
    text-align: left;

    h6 {
      margin-bottom: 0;
    }
  }

  .right {
    padding-top: 15px;
    padding-right: 10px;

    a {
      font-size: 12px;
    }
  }
}

swiper {
  height: auto;
  //display: table;
}

.swiper-slide {
  text-align: center;
  font-size: 18px;

  /* Center slide text vertically */
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
}

.swiper-wrapper {
  box-sizing: border-box !important;
}


a.swiper-link:hover {
  text-decoration: none !important;
}


.swiper-wrapper {
  height: auto !important;
}

.swiper-container {
  overflow: visible !important;
}

